--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     }
     main {
       background-color: white; padding:20px;
-      border-radius: 10px; box-shadow: 0px 0px 30px slategrey; border-style: solid; border-width: 1px; border-color: gold;
+      border-radius: 10px; box-shadow: 0px 0px 30px #FFFF66; border-style: solid; border-width: 1px; border-color: gold;
       text-align: left;
       max-width: 660px;
       margin: 0 auto;
     }
     body {
-      font-family: arial; background-color: lightgray
+      font-family: Georgia, serif, Times New Roman; background-color: #FFFF99
     }
     header {
       text-align: center;
@@ -39,12 +39,10 @@
 <p>Code Learner</p>
 <main>
   <p>
-    I have a wide
-      <a href="http://en.wikipedia.org/wiki/Peace_symbols"
-      target="_blank">
-          peace sign
-      </a>.
+    Thank you for checking out my page.  It is still work in progress as I continue to develop my web development skills.  <br><br>
+    You can reach me at:
   </p>
+    <ul>
     <li>
       <a href="https://www.facebook.com/kristin.oh.37"
       target="_blank">
@@ -52,19 +50,26 @@
       </a>
     </li>
     <li>
-      <a href="https://plus.google.com/u/0/101862755185168979692/posts"
+      <a href="https://github.com/kristinoh"
       target="_blank">
-          Google+
+           Github
       </a>
     </li>
-    <li>
-      <a href="https://instagram.com/jiyoungbobiyoung/"
-      target="_blank">Instagram</a>
-    </li>
+  </ul>
+  <br>
+  <p>
+    Whilst at General Assembly (San Francisco branch), I was introduced to HTML, CSS, and Javascript.
+    <br><br>
+    Please take a look at my very first assignments:
+  </p>
+  <ul>
     <li><a href="http://kristinoh.github.io/FEWD-30/Homework/homework-1" target="_blank">Whales Homework</li>
     <li>
       <a href="http://kristinoh.github.io/FEWD-30/Homework/to-do.html"
       target="_blank">To-Do List</a>
+    </li>
+    <li>
+      <a href="http://kristinoh.github.io/FEWD-30/Homework/Homework-5.html" target="_blank">Simple Calculator</a>
     </li>
     <li>
       <a href="FinalProject/About.html" target="_blank">Yellow Tree Project</a>
@@ -73,7 +78,7 @@
     </main>
     <footer>
       <p>
-        Last updated May 20th, 2015
+        Last updated June 1st, 2015
       </p>
     </footer>
   </body>
