updated index page
updated index page

--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <title>Kristin Oh</title>
 
     <style>
+    body {
+      background-image: url("blueombrepaint.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      max height: 100%;
+    }
+
     a {
       color: blue;
     }
     main {
+      position: relative;
       background-color: white; padding:20px;
-      border-radius: 10px; box-shadow: 0px 0px 30px #FFFF66; border-style: solid; border-width: 1px; border-color: gold;
+      border-radius: 10px; box-shadow: 0px 0px 30px #DCDCDC; border-style: solid; border-width: 1px; border-color: #DCDCDC;
       text-align: left;
+      font-family: Georgia, serif;
+      background-color: rgba(255, 255, 255, .7);
+
       max-width: 660px;
       margin: 0 auto;
-    }
-    body {
-      font-family: Georgia, serif, Times New Roman; background-color: #FFFF99
     }
     header {
       text-align: center;
@@ -25,12 +33,13 @@
       border-radius: 100%;
     }
     footer {
-      font-family: Arial; text-align:center; color: darkgray;
+      font-family: Georia, serif; text-align:center; color: darkgray;
     }
 
     </style>
   </head>
 
+<body>
   <header>
         <img src="https://graph.facebook.com/kristin.oh.37/picture?width=300&height=300"
           width="150"
