--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>Code Learner</p>
 <main>
   <p>
-    Thank you for checking out my page.  It is still work in progress as I continue to develop my web development skills.  <br><br>
+    Thank you for checking out my page.  It is still work in progress as I continue to practice my web development skills.  <br><br>
     You can reach me at:
   </p>
     <ul>
