clean up code and make css better looking
clean up code and make css better looking

--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -23,8 +23,13 @@
 
     <main>
       <h1>Get involved!</h1>
-      Find where you live and donate to a nearby place, brah.
-      <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=donation%20centers%20san%20fracnsco&key=AIzaSyBzCP9RTPLII7u3hgvnrCHL3_mkkTfDpSA"
+      There are many ways to get involved:  Donate clothes, blood, cars, etc.<br><br>
+      Check out the locations all over California!
+      <iframe width="600"
+              height="450"
+              frameborder="0"
+              style="border:0"
+              src="https://www.google.com/maps/embed/v1/search?q=donation%20centers%20san%20fracnsco&key=AIzaSyBzCP9RTPLII7u3hgvnrCHL3_mkkTfDpSA"
     </main>
   </body>
 
