--- a/FinalProject/About.html
+++ b/FinalProject/About.html
@@ -2,21 +2,22 @@
 <html>
   <head>
     <title>Yellow Tree Project</title>
-  </head>
   <link rel="stylesheet" href=finalCSS.css media="all">
   <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
   <link rel="stylesheet" href=finalmobile.css media="print">
-
+</head>
   <body>
     <header>
       <div id="nav">
         <ul>
-          <li><a href="About.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
           <li><a href="mission.html">Mission</a></li>
           <li><a href="pastevents.html">Past Events</a></li>
           <li><a href="getinvolved.html">Get Involved</a></li>
           <li><a href="inspiration.html">Inspiration Boards</a></li>
           <li><a href="contact.html">Contact</a></li>
+
         </ul>
       </div>
     </header>
