--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <title>Get Involved - Yellow Tree Project</title>
+    <link rel="stylesheet" href=finalCSS.css media="all">
+    <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
+    <link rel="stylesheet" href=finalmobile.css media="print">
   </head>
-  <link rel="stylesheet" href=finalCSS.css media="all">
-  <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
-  <link rel="stylesheet" href=finalmobile.css media="print">
 
   <body>
     <header>
       <div id="nav">
         <ul>
-          <li><a href="About.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
           <li><a href="mission.html">Mission</a></li>
           <li><a href="pastevents.html">Past Events</a></li>
           <li><a href="getinvolved.html">Get Involved</a></li>
@@ -24,7 +25,7 @@
     <main>
       <h1>Get involved!</h1>
       There are many ways to get involved:  Donate clothes, blood, cars, etc.<br><br>
-      Check out the locations all over California!
+      Check out the locations all over California!<br><br>
       <iframe width="600"
               height="450"
               frameborder="0"
