--- a/FinalProject/inspiration.html
+++ b/FinalProject/inspiration.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Yellow Tree Project</title>
+    <title>Inspiration - Yellow Tree Project</title>
+
+    <link rel="stylesheet" href=finalCSS.css media="all">
+    <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
+    <link rel="stylesheet" href=finalmobile.css media="print">
+
   </head>
-  <link rel="stylesheet" href=finalCSS.css media="all">
-  <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
-  <link rel="stylesheet" href=finalmobile.css media="print">
 
   <body>
     <header>
       <div id="nav">
         <ul>
-          <li><a href="About.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
           <li><a href="mission.html">Mission</a></li>
           <li><a href="pastevents.html">Past Events</a></li>
           <li><a href="getinvolved.html">Get Involved</a></li>
           <li><a href="inspiration.html">Inspiration Boards</a></li>
           <li><a href="contact.html">Contact</a></li>
-        </ul>
+
       </div>
     </header>
       <main>
@@ -40,7 +43,3 @@
   <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
   </script>
 </html>
-
-<!-- use in 'contacts' section
-<div id="yellowtree"><img src=    "file:///Users/KristinOh/GitHub/FEWD-30/FinalProject/yellowtree.png"</a>
-</div> -->
