--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -28,6 +28,7 @@
       Check out the locations all over California!<br><br>
       <iframe width="600"
               height="450"
+              align: middle
               frameborder="0"
               style="border:0"
               src="https://www.google.com/maps/embed/v1/search?q=donation%20centers%20san%20fracnsco&key=AIzaSyBzCP9RTPLII7u3hgvnrCHL3_mkkTfDpSA"
