--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     }
     footer {
       font-family: Georia, serif; text-align:center; color: darkgray;
+      position: fixed;
+      left: 0px;
+      bottom: 0px;
+      height: 25px;
+      width: 100%;
     }
 
     </style>
