changed link for yellow tree project
changed link to send to home page of yellow tree project

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <a href="http://kristinoh.github.io/FEWD-30/Homework/Homework-5.html" target="_blank">Simple Calculator</a>
     </li>
     <li>
-      <a href="FinalProject/About.html" target="_blank">Yellow Tree Project</a>
+      <a href="FinalProject/home.html" target="_blank">Yellow Tree Project</a>
     </li>
   </ul>
     </main>
