prep for final presentation
last stuff for final presentation

--- a/FinalProject/contact.html
+++ b/FinalProject/contact.html
@@ -24,7 +24,6 @@
     <header>
       <div id="nav">
         <ul>
-          <li><a href="home.html">Home</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="mission.html">Mission</a></li>
           <li><a href="pastevents.html">Past Events</a></li>
@@ -110,5 +109,6 @@ function createGuestComments(event) {
 
 form.addEventListener("submit", createGuestComments);
 
+// if first name and comments section is null do not append child.
 
 </script>
