--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -11,7 +11,6 @@
     <header>
       <div id="nav">
         <ul>
-          <li><a href="home.html">Home</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="mission.html">Mission</a></li>
           <li><a href="pastevents.html">Past Events</a></li>
@@ -24,7 +23,7 @@
 
     <main>
       <h1>Get involved!</h1>
-      There are many ways to get involved:  Donate clothes, blood, cars, etc.<br><br>
+      There are many ways to get involved:  Donate clothes, blood, cars, etc. or host your own function!<br><br>
       Check out the locations all over California!<br><br>
       <iframe width="600"
               height="450"
