--- a/FinalProject/pastevents.html
+++ b/FinalProject/pastevents.html
@@ -6,13 +6,32 @@
   <link rel="stylesheet" href=finalCSS.css media="all">
   <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
   <link rel="stylesheet" href=finalmobile.css media="print">
+
+  <style media="screen">
+  /** {
+    border: solid;
+  }*/
+    img {
+      height: 30%;
+      width: 30%;
+      padding: 2px;
+    }
+    ul{
+      list-style: none;
+      display: block;
+      align: auto;
+    }
+    #janeinfo {
+      display: block;
+    }
+
+  </style>
 </head>
 
   <body>
     <header>
       <div id="nav">
         <ul>
-          <li><a href="home.html">Home</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="mission.html">Mission</a></li>
           <li><a href="pastevents.html">Past Events</a></li>
@@ -26,9 +45,33 @@
       <main id="textcontent">
         <h1>Past Events</h1>
         <p id="ontop">
-          Please see photos of what I did -- whaaat.
+          Please see our past events!
         </p>
+        <br>
+        <div style="display:inline">
+        <ul>
+          <li>
+            <img id="rose" src="IMG_3707.JPG"/>
+          </li>
+          <li>
+              Guest speaker: Jane Love - Senior Social Worker
+              <br><br>
+              Jane took two years off to take care of her kids from managing an independent social working agency located in Fremont.  She clients are men and women who suffer from mental illness and homelessness.  In our latest event, she facilitated a group session about the stigma and stereotypes of homelessness.  She ended the session with 'We cannot avoid what we know.  What can we do about it, as a community and as an individual?'
 
+            </li>
+
+          </ul>
+        </div>
+
+      <div class="pastimages">
+        <img src="2AD744CB-B749-46F0-9F50-7930217DE923.JPG"/>
+        <img src="2576E800-2268-4A4B-A896-8BD80D3807CE.JPG"/>
+        <img src="8462736D-E26A-45DB-A7B4-798CDDFDA956.JPG"/>
+        <img src="IMG_2810.JPG">
+        <img src="IMG_2835.JPG"/>
+        <img src="IMG_20140517_112032.jpg"/>
+
+      </div>
       </main>
   </body>
 
