--- a/FinalProject/home.html
+++ b/FinalProject/home.html
@@ -24,13 +24,7 @@
     <header>
       <div id="nav">
         <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="mission.html">Mission</a></li>
-          <li><a href="pastevents.html">Past Events</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
-          <li><a href="inspiration.html">Inspiration Boards</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="About.html">Enter</a></li>
 
       </div>
     </header>
