--- a/FinalProject/getinvolved.html
+++ b/FinalProject/getinvolved.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href=finalCSS.css media="all">
     <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
     <link rel="stylesheet" href=finalmobile.css media="print">
+    <meta name="viewport" content="width=600">
   </head>
 
   <body>
