--- a/FinalProject/mission.html
+++ b/FinalProject/mission.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href=finalCSS.css media="all">
   <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
   <link rel="stylesheet" href=finalmobile.css media="print">
+  <meta name="viewport" content="width=600">
 </head>
   <body>
     <header>
       <div id="nav">
         <ul>
-          <li><a href="home.html">Home</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="mission.html">Mission</a></li>
           <li><a href="pastevents.html">Past Events</a></li>
