mobile friendly mobiles.css
mobile friendly mobiel.css

--- a/FinalProject/pastevents.html
+++ b/FinalProject/pastevents.html
@@ -4,7 +4,7 @@
     <title>Yellow Tree Project</title>
 
   <link rel="stylesheet" href=finalCSS.css media="all">
-  <link rel="stylesheet" href=finalmobile.css media="(max-width: 660px)">
+  <link rel="stylesheet" href=finalmobile.css media="(max-width: 600px)">
   <link rel="stylesheet" href=finalmobile.css media="print">
 
   <style media="screen">
@@ -38,6 +38,7 @@
           <li><a href="getinvolved.html">Get Involved</a></li>
           <li><a href="inspiration.html">Inspiration Boards</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <meta name="viewport" content="width=600">
 
         </ul>
       </div>
