--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 
     <style>
     body {
+      margin-top: 50px;
       background-image: url("blueombrepaint.jpg");
       background-repeat: no-repeat;
       background-size: cover;
-      max height: 100%;
+      max height: 100;
     }
 
     a {
