saved max-width for website
saved max-width for website

--- a/FinalProject/About.html
+++ b/FinalProject/About.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href=finalCSS.css media="all">
   <link rel="stylesheet" href=finalmobile.css media="(max-width: 600px)">
   <link rel="stylesheet" href=finalmobile.css media="print">
+
+  <section id="home" data-type="background" 
+  </section>
 </head>
   <body>
     <header>
