--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body>
   <header>
-        <img src="https://graph.facebook.com/kristin.oh.37/picture?width=300&height=300"
+        <img src="file:///Users/KristinOh/Downloads/1044114_1393684140852489_1114001811_n.jpg"
           width="150"
           height="150">
 <h1>Kristin Oh</h1>
