--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
     body {
       margin-top: 50px;
-      background-image: url("blueombrepaint.jpg");
+      !--background-image: url("blueombrepaint.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       max height: 100;
