--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
     body {
       margin-top: 50px;
-      !--background-image: url("blueombrepaint.jpg");
+      /*background-image: url("blueombrepaint.jpg");*/
       background-repeat: no-repeat;
       background-size: cover;
       max height: 100;
@@ -31,7 +31,7 @@
       text-align: center;
     }
     img {
-      border-radius: 100%;
+      border-radius: 75%;
     }
     footer {
       font-family: Georia, serif; text-align:center; color: darkgray;
