--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin-top: 50px;
       /*background-image: url("blueombrepaint.jpg");*/
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: 100%;
       max height: 100;
     }
 
