--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
     body {
       margin-top: 50px;
-      /*background-image: url("blueombrepaint.jpg");*/
+      background-image: url("blueombrepaint.jpg");
       background-repeat: no-repeat;
       background-size: 100%;
       max height: 100;
@@ -31,7 +31,7 @@
       text-align: center;
     }
     img {
-      border-radius: 75%;
+      border-radius: 25%;
     }
     footer {
       font-family: Georia, serif; text-align:center; color: darkgray;
@@ -48,8 +48,8 @@
 <body>
   <header>
         <img src="file:///Users/KristinOh/GitHub/FEWD-30/halfface.jpg"
-          width="150"
-          height="150">
+          width="300"
+          height="300">
 <h1>Kristin Oh</h1>
 <p>Code Learner</p>
 <main>
